# sonos-stream-deck

./: .gitignore  Cargo.toml  Makefile.toml  README.md  TODO.md  log4rs.yml
sh.viora.controller-for-sonos.sdPlugin/: manifest.json
src/: error.rs  main.rs  services.rs  stream_deck.rs  zone.rs
src/sonos/: error.rs  mod.rs  services.rs
src/stream_deck/: error.rs  handler.rs  mod.rs  plumbing.rs
