[package]
name = "sonos-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

# For UPnP support
rupnp = "2.0.0"
serde-xml-rs = "0.6.0"

# For WebSockets support
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
tokio-tungstenite = { version = "*" }

# Logging support.
log = "0.4"
log4rs = "1"                                                  # log to file (Stream Deck won't show us our code output)
log-panics = { version = "2", features = ["with-backtrace"] }
